--- a/Angular/Angular/Angular.csproj
+++ b/Angular/Angular/Angular.csproj
@@ -65,6 +65,15 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="ng-if\Index.html" />
+    <Content Include="ng-if\js\app1.js" />
+    <Content Include="ng-if\js\controller\MovesController.js" />
+    <Content Include="ng-show\js\app1.js" />
+    <Content Include="ng-show\Index.html" />
+    <Content Include="ng-show\js\controller\MovesController.js" />
+    <Content Include="ng-switch\Index.html" />
+    <Content Include="ng-switch\js\app1.js" />
+    <Content Include="ng-switch\js\controller\MovesController.js" />
     <Content Include="packages.config" />
     <Content Include="bower.json" />
     <Content Include="bower_components\angular\.bower.json" />
